--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>"My current favourite song is Ek Pyar Ka Nagma hai"</div>
+	<p><a href="https://youtu.be/H2BTCPW3Hw8"></a></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
